add sudo configurations

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -24,7 +24,7 @@ jobs:
           restore-keys: |
             ${{ runner.OS }}-npm-cache
       - name: Install Dependencies
-        run: npm install
+        run: sudo chmod -R 777 . && sudo npm install
       - name: Build
         run: sudo npm run build
       - name: Deploy
