--- a/_config.yml
+++ b/_config.yml
@@ -7,13 +7,13 @@ title: Ade's Blog
 subtitle: ''
 description: ''
 keywords:
-author: John Doe
+author: Ade
 language: zh-CN
 timezone: ''
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: http://example.com
+url: https://duhaode520.github.io
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 pretty_urls:
